TreeSetDemo: internals and complexity